Add new custom configuration

--- a/python/configurations.json
+++ b/python/configurations.json
@@ -46,5 +46,13 @@
 		["meca",{
 		"position": {"x": 494,"y": 264,"w": 117,"h": 76}
 		}]
-	]
+	],
+  "yukari": [
+    [ "asserv", { "position": { "x": 494, "y": 0, "w": 230, "h": 76 } } ],
+    [ "console", { "position": { "x": 734, "y": 336, "w": 617, "h": 263 } } ],
+    [ "logs", { "position": { "x": 734, "y": 0, "w": 617, "h": 334 } } ],
+    [ "graph", { "position": { "x": 3, "y": 349, "w": 488, "h": 250 }, "view": "position" } ],
+    [ "meca", { "position": { "x": 494, "y": 126, "w": 117, "h": 76 } } ],
+    [ "field", { "position": { "x": 3, "y": 0, "w": 489, "h": 340 } } ]
+  ]
 }
