--- a/python/configurations.json
+++ b/python/configurations.json
@@ -53,5 +53,13 @@
     [ "meca", { "position": { "x": 494, "y": 126, "w": 117, "h": 76 } } ],
     [ "field", { "position": { "x": 3, "y": 0, "w": 489, "h": 340 } } ],
     [ "detection", { "position": { "x": 424, "y": 280, "w": 330, "h": 313 } } ]
-  ]
+  ],
+	"tophe": [
+	  [	"console", 	{"position": 	{ "x": 6,    "y": 623, "w": 787, "h": 91	} } ],		
+	  [ "logs",    	{"position": 	{ "x": 815,	 "y": 120, "w": 540, "h": 255 } } ],
+    [ "field", 		{ "position": { "x": 3, 	 "y": 7 ,  "w": 790, "h": 600 } } ],
+    [ "asserv", 	{ "position": { "x": 873,  "y": 2, 	 "w": 255, "h": 105 }, "robot": "galipette" } ],
+	  [ "meca", 		{ "position": { "x": 1178, "y": 3, 	 "w": 165, "h": 81 	}, "robot": "galipette" } ],
+    [ "detection", { "position": { "x": 984, "y": 396, "w": 330, "h": 313 } } ]
+	]
 }
