--- a/python/configurations.json
+++ b/python/configurations.json
@@ -30,9 +30,10 @@
 		["logs",			{"position": {"x": 350,		"y": 3,		"w": 589,	"h": 911}	}],
 		["field",			{"position": {"x": 941,		"y": 255,	"w": 876,	"h": 659}	}],
 		["asserv",		{"position": {"x": 941,		"y": 151,	"w": 252,	"h": 102},	"robot": "galipeur"	}],
+		["asserv",		{"position": {"x": 941,		"y": 51,	"w": 236,	"h": 98},		"robot": "galipette"	}],
 		["meca",			{"position": {"x": 1352,	"y": 16,	"w": 226,	"h": 237}	}],
 		["detection",	{"position": {"x": 1580,	"y": 16,	"w": 237,	"h": 237}	}],
-		["match",			{"position": {"x": 941,		"y": 3,		"w": 132,	"h": 72}	}]
+		["match",			{"position": {"x": 1195,	"y": 181,	"w": 132,	"h": 72}	}]
 	],
   "yukari": [
     [ "asserv", { "position": { "x": 494, "y": 0, "w": 252, "h": 102 } } ],
