--- a/python/configurations.json
+++ b/python/configurations.json
@@ -36,12 +36,12 @@
 		["match",			{"position": {"x": 1195,	"y": 181,	"w": 132,	"h": 72}	}]
 	],
   "yukari": [
-    [ "asserv", { "position": { "x": 494, "y": 0, "w": 252, "h": 102 } } ],
-    [ "console", { "position": { "x": 756, "y": 336, "w": 585, "h": 258 } } ],
-    [ "logs", { "position": { "x": 756, "y": 0, "w": 585, "h": 334 } } ],
-    [ "meca", { "position": { "x": 494, "y": 126, "w": 117, "h": 76 } } ],
-    [ "field", { "position": { "x": 3, "y": 0, "w": 489, "h": 340 } } ],
-    [ "detection", { "position": { "x": 424, "y": 280, "w": 330, "h": 313 } } ]
+    [ "console", { "position": { "x": 3, "y": 3, "w": 304, "h": 602 } } ],
+    [ "logs", { "position": { "x": 309, "y": 5, "w": 471, "h": 596 } } ],
+    [ "field", { "position": { "x": 782, "y": 194, "w": 541, "h": 407 } } ],
+    [ "detection", { "position": { "x": 782, "y": 5, "w": 187, "h": 187 } } ],
+    [ "meca", { "position": { "x": 971, "y": 5, "w": 179, "h": 188 } } ],
+    [ "match", { "position": { "x": 1152, "y": 5, "w": 146, "h": 98 } } ]
   ],
   "tophe": [
     [ "console",   {"position":  { "x": 6,    "y": 623, "w": 787, "h": 91  } } ],  
