conf og boomotter added

--- a/python/configurations.json
+++ b/python/configurations.json
@@ -33,7 +33,8 @@
 		["asserv",		{"position": {"x": 941,		"y": 51,	"w": 236,	"h": 98},		"robot": "galipette"	}],
 		["meca",			{"position": {"x": 1352,	"y": 16,	"w": 226,	"h": 237}	}],
 		["detection",	{"position": {"x": 1580,	"y": 16,	"w": 237,	"h": 237}	}],
-		["match",			{"position": {"x": 1195,	"y": 181,	"w": 132,	"h": 72}	}]
+		["match",			{"position": {"x": 1195,	"y": 181,	"w": 132,	"h": 72}	}],
+		["boomotter", {"position": {"x": 944,   "y": 3,   "w": 229, "h": 40}  }]
 	],
   "yukari": [
     [ "console", { "position": { "x": 3, "y": 3, "w": 304, "h": 602 } } ],
