Update yukari configuration

--- a/python/configurations.json
+++ b/python/configurations.json
@@ -37,9 +37,9 @@
     [ "logs", { "position": { "x": 309, "y": 5, "w": 471, "h": 596 } } ],
     [ "field", { "position": { "x": 782, "y": 194, "w": 541, "h": 407 } } ],
     [ "detection", { "position": { "x": 782, "y": 5, "w": 187, "h": 187 } } ],
-    [ "meca", { "position": { "x": 971, "y": 5, "w": 179, "h": 188 } } ],
-    [ "match", { "position": { "x": 1152, "y": 5, "w": 146, "h": 72 } } ],
-    [ "boomotter", { "position": { "x": 1152, "y": 80, "w": 200, "h": 72 } } ]
+    [ "match", { "position": { "x": 977, "y": 116, "w": 146, "h": 72 } } ],
+    [ "asserv", { "position": { "x": 977, "y": 5, "w": 255, "h": 105 }, "robot": "galipeur" } ],
+    [ "boomotter", { "position": { "x": 1123, "y": 116, "w": 200, "h": 72 } } ]
   ],
   "tophe": [
     [ "console",   {"position":  { "x": 6,    "y": 623, "w": 787, "h": 91  } } ],  
